Doc/force-app/main/default/objects/OP4I_DLIP_View__c/fields/Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type__c</fullName>
    <label>Deal Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>