Doc/force-app/main/default/objects/OP4I_DLIP_View__c/fields/DLIP_Product__c.field-meta.xml
<CustomField>
    <fullName>DLIP_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DLIP Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>OP4I DLIP View (DLIP Product)</relationshipLabel>
    <relationshipName>OP4I_DLIP_View1</relationshipName>
    <type>Lookup</type>
</CustomField>